Fixed navbar: Aligned items horizontally and evenly spaced; Fixed Socials: Horizontally aligned icons used for github and linkedin.

--- a/PortfolioProject/style.css
+++ b/PortfolioProject/style.css
@@ -5,7 +5,6 @@ h3 {
 
 body {
     background-image: url(Images/Forest.avif);
-    background-color: burlywood;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -23,14 +22,8 @@ nav {
     margin-bottom: 5%;
 }
 
-.social .center-div {
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-}
-
 section {
-    padding: 5%;
+    padding: 8%;
 }
 
 .about-me {
@@ -38,6 +31,37 @@ section {
     margin-right: auto;
     width: 50%;
     text-align: center;
+}
+
+.social {
+    text-align: center;
+}
+
+.resume h3 {
+    color: rgb(235, 224, 224);
+}
+
+.icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+a {
+    padding: 2%;
+}
+
+.nav-link {
+    width: 100px;
+    border-radius: 10%;
+}
+
+.nav-link:hover {
+    border-radius: 10%;
+    width: 100px;
+    content: "";
+    transition: .4s;
+    background-color: rgb(220, 206, 206);
 }
 
 .site-pic {
@@ -53,13 +77,8 @@ iframe {
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
-
-.nav-link:hover {
-    background-color: rgb(110, 110, 231);
-    color: white;
-    border-radius: 10%;
-    width: 7%;
+    width: 700px;
+    height: 500px;
 }
 
 .socials {
